# MyCppPrimer

./: .gitignore  10_1.cpp  10_11.cpp  10_12.cpp  10_13.cpp  10_14.cpp  10_15.cpp  10_16.cpp  10_17.cpp  10_18.cpp  10_19.cpp  10_2.cpp  10_20.cpp  10_21.cpp  10_22.cpp  10_24.cpp  10_25.cpp  10_27.cpp  10_28.cpp  10_29.cpp  10_3.cpp  10_30.cpp  10_31.cpp  10_32.cpp  10_33.cpp  10_34.cpp  10_35.cpp  10_36.cpp  10_37.cpp  10_4.cpp  10_42.cpp  10_6.cpp  10_7.cpp  10_9.cpp  11_11.cpp  11_12.cpp  11_14.cpp  11_16.cpp  11_17.cpp  11_19.cpp  (+197 more)
data/: 10_29.txt  11_33_input.txt  11_33_map_rule.txt  12_20.txt  12_30.txt  14_38_data.txt  8_10_input.txt  9_49_words.txt  Sales_out.txt  Sales_total.txt  test.txt
include/: 10_32_Sales_data.h  12_19_StrBlobPtr.h  12_22_ConstStrBlobPtr.h  12_2_StrBlob.h  13_26_StrBlob.h  13_27_HasPtr.h  13_28.h  13_34_Messages.h  13_39_StrVec.h  13_42_TextQuery.h  13_44_String.h  13_8_Employee.h  13_9_Employee.h  15_15_Disc_Quote.h  15_16_Limit_Quote.h  15_21_GeometricPrimitives.h  15_3_Quote.h  15_5_Bulk_Quote.h  15_7_Limit_Quote.h  7_23_Screen.h  7_24_Screen.h  7_26_Sales_data.h  7_27_Screen.h  7_31.h  7_32.h  7_41_Sales_data.h  7_4_Person.h  7_53.h  7_58_Example.h  Sales_data.h  TextQuery.h
